added body to html pages

--- a/templates/blogHome.html
+++ b/templates/blogHome.html
@@ -7,6 +7,6 @@
     <title>About</title>
   </head>
   <body>
-    this is the home page of the blog
+    this is the blog home page
   </body>
 </html>
